# tropos-taro

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/mordor/: __init__.py  _version.py  click.py  cloud_coverage.py  cloud_coverage_main.py  data.py  futils.py  get_config.py  keogram.py  plot.py  qcrad.py  utils.py
src/mordor/conf/: cloudiness_js_meta.json.template  config.ini.template  mordor_config.json
src/mordor/share/: mordor4_cvao_230929.CR1X  mordor_calibration.json  mordor_cfmeta.json  mordor_config.json  mordor_instrument_map.json  mordor_logger_tables.json  taro-lacros_241128.CR1
src/taro/: __init__.py  bsrn.py  click.py  cloud_coverage.py  data.py  futils.py  keogram.py  plot.py  utils.py
src/taro/conf/: taro_config.json
src/taro/share/: horizon_actris-oscm_20260127.txt  taro-melpitz_260311.CR1X  taro-oscm_250526.CR1X  taro_calibration.json  taro_cfmeta.json  taro_instrument_map.json  taro_logger_tables.json
